--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,10 +4,13 @@
     <%- include('../components/head'); %>
 
 	<body>
+        <%- include('../components/header'); %>
 
 			<main>
                 <h1><%= title %></h1>
 			</main>
+
+        <%- include('../components/footer'); %>
 
 			<script src="../../public/js/script.js"></script>
 	</body>
