changed: routing for match page, also played around with some css

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,3 +1,9 @@
 <footer>
-    <p>© 2022 Michel Wassing - Tech-5 - 500846995</p>
+    <nav>
+        <ul>
+            <li><a>Search</a></li>
+            <li><a>Home</a></li>
+            <li><a>Settings</a></li>
+        </ul>
+    </nav>
 </footer>
