--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -228,13 +228,13 @@ i {
   font-style: italic;
 }
 
-ul,
+/* ul,
 ol {
   padding-left: 30px;
-}
+} */
 
 ul {
-  list-style: disc;
+  list-style: none;
 }
 
 ol {
@@ -249,12 +249,31 @@ Above is the tweaked version of the reset css to my whishes
 */
 
 body {
-    width: 100%;
-    max-width: 1440px;
+    display: flex;
+    flex-direction: column;
 
-    margin: 30vh auto;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 100%;
+    max-width: 375px;
+    max-height: 500px;
+
+    margin: 10vh auto;
     padding: 0 15px;
 
     
     background-color: rgb(50, 68, 68);
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-evenly;
+
+    width: 100%;
+
+}
+
+footer nav ul {
+    display: flex;
 }
