changed: packagelock and server.js for nodemon usage

--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -7,13 +7,12 @@
         <%- include('../components/header'); %>
 
 			<main>
-                <h1><%= title %></h1>
-				<p>hoi</p>
+                <h1>404 page</h1>
 			</main>
 
         <%- include('../components/footer'); %>
 
-	<script src="../../public/js/script.js"></script>
+			<script src="../../public/js/script.js"></script>
 	</body>
 
 </html>
