--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -272,8 +272,7 @@ footer ul {
 
     width: 100%;
 
-}
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
 
-footer nav ul {
-    display: flex;
 }
