changed: added some stuff :S

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,9 +1,8 @@
 <footer>
     <nav>
         <ul>
-            <li><a>Search</a></li>
+            <li><a>Matches</a></li>
             <li><a>Home</a></li>
-            <li><a>Settings</a></li>
         </ul>
     </nav>
 </footer>
