--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -257,22 +257,22 @@ body {
     width: 100%;
     height: 100%;
     max-width: 375px;
-    max-height: 500px;
+    max-height: 700px;
 
-    margin: 10vh auto;
-    padding: 0 15px;
+    margin: 4vh auto;
+    padding: 40px;
 
+    border-radius: 10px;
+
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
     
-    background-color: rgb(50, 68, 68);
+    background-color: lightblue;
 }
 
 footer ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
     width: 100%;
-
-    font-size: 22px;
-    font-family: Arial, Helvetica, sans-serif;
-
 }
