--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,8 +1,9 @@
 <footer>
     <nav>
         <ul>
-            <li><a>Matches</a></li>
-            <li><a>Home</a></li>
+            <li><a href="/match">Matches</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/admin">admin</a></li>
         </ul>
     </nav>
 </footer>
