--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -7,12 +7,12 @@
         <%- include('../components/header'); %>
 
 			<main>
-				<section></section>
+                <%- include('../partials/add-form'); %>
 			</main>
 
         <%- include('../components/footer'); %>
 
-			<script src="../../public/js/script.js"></script>
+	<script src="../../public/js/script.js"></script>
 	</body>
 
 </html>
