--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,12 +3,13 @@
 
     <%- include('../components/head'); %>
 
-	<body>
+	<body id="home">
         <%- include('../components/header'); %>
 
 			<main>
-                <h1><%= title %></h1>
-				<p>hoi</p>
+				<section></section>
+				<section></section>
+				<footer><%- include('../partials/update-form'); %></footer>
 			</main>
 
         <%- include('../components/footer'); %>
