--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -7,7 +7,10 @@
         <%- include('../components/header'); %>
 
 			<main>
-                <%- include('../partials/add-form'); %>
+				<section>
+					
+					<%- include('../partials/add-form'); %>
+				</section>
 			</main>
 
         <%- include('../components/footer'); %>
