--- a/views/pages/match.ejs
+++ b/views/pages/match.ejs
@@ -7,7 +7,11 @@
         <%- include('../components/header'); %>
 
 			<main>
-				<section></section>
+				<section>
+					<% for (let index=0; index < data.length; index++) { %>
+						<h1><%= data[index].firstname %></h1>
+					<% } %>
+				</section>
 			</main>
 
         <%- include('../components/footer'); %>
