--- a/views/partials/add-form.ejs
+++ b/views/partials/add-form.ejs
@@ -1,5 +1,5 @@
 <form action="/add" method="post" enctype="multipart/form-data">
-    <fieldset>
+    <fieldset id="formAddFieldset">
         <legend>Add person</legend>
         <label for="profilepic">Upload profile picture:</label>
         <input type="file" id="profilepic" name="profilepic">
