added: liked overview page and route

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -258,7 +258,7 @@ body {
     max-width: 425px;
     max-height: 90vh;
 
-    margin: 4vh auto;
+    margin: 20px auto;
     padding: 40px;
 
     border-radius: 10px;
