--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -3,6 +3,7 @@
         <ul>
             <li><a href="/match">Matches</a></li>
             <li><a href="/">Home</a></li>
+            <li><a href="/liked">liked</a></li>
             <li><a href="/admin">admin</a></li>
         </ul>
     </nav>
