--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,11 @@
 
 			<main>
 				<section></section>
-				<section></section>
+				<section>
+					<% for (let index=0; index < data.length; index++) { %>
+						<h1><%= data[index].firstname %></h1>
+					<% } %>
+				</section>
 				<footer><%- include('../partials/update-form'); %></footer>
 			</main>
 
