fixed: added additional styling, fixed some page logic, added: also added a student-profile partial which will create a section for each student on the home page

--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -9,9 +9,7 @@
 			<main>
                 <h1>404 page</h1>
 			</main>
-
-        <%- include('../components/footer'); %>
-
+			<%- include('../components/navigation'); %>
 			<script src="../../public/js/script.js"></script>
 	</body>
 
