--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -11,10 +11,8 @@
 					
 					<%- include('../partials/add-form'); %>
 				</section>
+				<%- include('../components/navigation'); %>
 			</main>
-
-        <%- include('../components/footer'); %>
-
 	<script src="../../public/js/script.js"></script>
 	</body>
 
