--- a/views/pages/liked.ejs
+++ b/views/pages/liked.ejs
@@ -12,10 +12,8 @@
 						<h1><%= data[index].firstname %></h1>
 					<% } %>
 				</section>
+				<%- include('../components/navigation'); %>
 			</main>
-
-        <%- include('../components/footer'); %>
-
 			<script src="../../public/js/script.js"></script>
 	</body>
 
