--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -248,32 +248,45 @@ Above is the tweaked version of the reset css to my whishes
 
 */
 
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+:root {
+  --color-black: #000;
+  --color-white: #fff;
+  --bg-color-main: #add8e6;
 
-    width: 100%;
-    height: 100%;
-    max-width: 425px;
-    max-height: 90vh;
-
-    margin: 20px auto;
-    padding: 40px;
-
-    border-radius: 10px;
-
-    font-size: 22px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-    background-color: lightblue;
+  --bg-color-menu: #6298AA;
+  --bg-color-button: #ADD8E6;
+  --bg-color-button-secondary: #ec1111a6;
 }
 
-body > footer ul {
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  background-color: var(--color-white);
+
+  padding: 40px;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+  padding: 40px;
+  margin: 0 380px 40px;
+
+  background-color: var(--bg-color-main);
+}
+
+nav ul {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 
     width: 100%;
+}
+
+nav ul li{
+  font-size: 24px;
 }
 
 #update > fieldset {
@@ -286,4 +299,33 @@ body > footer ul {
   flex-direction: column;
 
   flex-wrap: nowrap;
+}
+
+.student-profile-container {
+  width: 100%;
+
+  margin-bottom: 50px;
+}
+
+.profileimg-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+
+  overflow: hidden;
+
+  padding-bottom: 90%;
+
+}
+
+.profileimg-container img {
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+  object-position: center;
 }
