--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,24 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <%- include('../components/head'); %>
 
-    <%- include('../components/head'); %>
-
-	<body id="home">
-        <%- include('../components/header'); %>
-
-			<main>
-				<section></section>
-				<section>
-					<% for (let index=0; index < data.length; index++) { %>
-						<h1><%= data[index].firstname %></h1>
-					<% } %>
-				</section>
-				<footer><%- include('../partials/update-form'); %></footer>
-			</main>
-
-        <%- include('../components/footer'); %>
-
-	<script src="../../public/js/script.js"></script>
-	</body>
-
+  <body id="home">
+    <main>
+      <h1>WeStudy</h1>
+      <%- include('../partials/student-profile'); %> 
+	  <%- include('../components/navigation'); %>
+    </main>
+    <script src="../../public/js/script.js"></script>
+  </body>
 </html>
