--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1,19 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
     <%- include('../components/head'); %>
-
-	<body>
-        <%- include('../components/header'); %>
-
-			<main>
-				<section>
-					
-					<%- include('../partials/add-form'); %>
-				</section>
-				<%- include('../components/navigation'); %>
-			</main>
-	<script src="../../public/js/script.js"></script>
-	</body>
-
+    <body>
+        <main>
+            <section><%- include('../partials/add-form'); %></section>
+            <%- include('../components/navigation'); %>
+        </main>
+        <script src="../../public/js/script.js"></script>
+    </body>
 </html>
