--- a/views/components/navigation.ejs
+++ b/views/components/navigation.ejs
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="/match">Matches</a></li>
     <li><a href="/">Home</a></li>
-    <li><a href="/liked">liked</a></li>
-    <li><a href="/admin">admin</a></li>
+    <li><a href="/liked">Liked</a></li>
+    <li><a href="/admin">Admin</a></li>
   </ul>
 </nav>
