--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -1,16 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
     <%- include('../components/head'); %>
-
-	<body>
-        <%- include('../components/header'); %>
-
-			<main>
-                <h1>404 page</h1>
-			</main>
-			<%- include('../components/navigation'); %>
-			<script src="../../public/js/script.js"></script>
-	</body>
-
+    <body>
+        <main>
+            <h1>404 page</h1>
+        </main>
+        <%- include('../components/navigation'); %>
+        <script src="../../public/js/script.js"></script>
+    </body>
 </html>
