--- a/views/pages/liked.ejs
+++ b/views/pages/liked.ejs
@@ -1,20 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
     <%- include('../components/head'); %>
 
-	<body>
-        <%- include('../components/header'); %>
-
-			<main>
-				<section>
-					<% for (let index=0; index < data.length; index++) { %>
-						<h1><%= data[index].firstname %></h1>
-					<% } %>
-				</section>
-				<%- include('../components/navigation'); %>
-			</main>
-			<script src="../../public/js/script.js"></script>
-	</body>
-
+    <body>
+        <main>
+            <section>
+                <% for (let index=0; index < data.length; index++) { %>
+                <h1><%= data[index].firstname %></h1>
+                <% } %>
+            </section>
+            <%- include('../components/navigation'); %>
+        </main>
+        <script src="../../public/js/script.js"></script>
+    </body>
 </html>
