--- a/views/partials/student-profile.ejs
+++ b/views/partials/student-profile.ejs
@@ -1,28 +1,43 @@
 <section class="student-profile-container">
     <% studenten.forEach(function(student) { %>
-        <div class="profileimg-container">
-            <img src="/public/images/profile/<%= student.profilepic %>" alt="student">
+    <div class="profileimg-container">
+        <img
+            src="/public/images/profile/<%= student.profilepic %>"
+            alt="student"
+        />
+    </div>
+    <div class="student-profile-content">
+        <h2><%= student.firstname + ' ' + student.lastname %></h2>
+        <div>
+            <ul>
+                <li>
+                    <span>E-mail:</span>
+                    <%= student.email %>
+                </li>
+                <li>
+                    <span>Education:</span>
+                    <%= student.education %>
+                </li>
+            </ul>
+            <form id="update" action="/update" method="post">
+                <button
+                    name="like"
+                    type="submit"
+                    value="<%= student._id %>"
+                    class="btn-liking"
+                >
+                    unlike
+                </button>
+                <button
+                    name="like"
+                    type="submit"
+                    value="<%= student._id %>"
+                    class="btn-liking"
+                >
+                    like
+                </button>
+            </form>
         </div>
-        <div class="student-profile-content">
-            <h2>
-                <%= student.firstname + ' ' + student.lastname %>
-            </h2>
-            <div>
-                <ul>
-                    <li>
-                        <span>E-mail:</span>
-                        <%= student.email %>
-                    </li>
-                    <li>
-                        <span>Education:</span>
-                        <%= student.education %>
-                    </li>
-                </ul>
-                <form id="update" action="/update" method="post">
-                    <button name="like" type="submit" value="<%= student._id %>" class="btn-liking">unlike</button>
-                    <button name="like" type="submit" value="<%= student._id %>" class="btn-liking">like</button>
-                </form>
-            </div>
-        </div>
-        <% }); %>
+    </div>
+    <% }); %>
 </section>
