--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -264,16 +264,15 @@ body {
   
   background-color: var(--bg-color-body);
 
-  width: 100%;
-  height: 100%;
-
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
 }
 
 main {
   padding: 40px;
-  margin: 0 380px 40px;
+  margin: 20px 380px;
+
+  border-radius: 10px;
 
   background-color: var(--bg-color-main);
 }
@@ -319,6 +318,8 @@ nav ul li:last-of-type {
   height: 0;
 
   overflow: hidden;
+
+  border-radius: 10px;
 
   padding-bottom: 90%;
   margin-bottom: 10px;
