--- a/views/partials/add-form.ejs
+++ b/views/partials/add-form.ejs
@@ -7,8 +7,8 @@
         <input type="text" id="firstname" name="firstname">
         <label for="lastname">Lastname:</label>
         <input type="text" id="lastname" name="lastname">
-        <label for="e-mail">e-mail</label>
-        <input type="e-mail" id="e-mail" name="e-mail">
+        <label for="email">e-mail</label>
+        <input type="email" id="email" name="email">
         <label for="education">education</label>
         <input type="text" id="education" name="education">
         <button type="submit">add person</button>
