added: image and TBD update request

--- a/views/pages/liked.ejs
+++ b/views/pages/liked.ejs
@@ -2,14 +2,11 @@
 <html lang="en">
     <%- include('../components/head'); %>
 
-    <body>
+    <body id="home">
         <main>
-            <section>
-                <% for (let index=0; index < data.length; index++) { %>
-                <h1><%= data[index].firstname %></h1>
-                <% } %>
-            </section>
-            <%- include('../components/navigation'); %>
+            <h1>WeStudy</h1>
+            <%- include('../partials/student-profile'); %> 
+			<%- include('../components/navigation'); %>
         </main>
         <script src="../../public/js/script.js"></script>
     </body>
