--- a/views/partials/student-profile.ejs
+++ b/views/partials/student-profile.ejs
@@ -14,7 +14,7 @@
                 <li>Education:<%= student.education %></li>
             </ul>
             <form id="update" action="/update" method="post">
-                <button name="like" type="submit" value="<%= student._id %>">unlike</button>
+                <button name="unlike" type="submit" value="<%= student._id %>">unlike</button>
                 <button name="like" type="submit" value="<%= student._id %>">like</button>
             </form>
         </div>
