added: setup for drag and drop api

--- a/views/partials/add-form.ejs
+++ b/views/partials/add-form.ejs
@@ -2,7 +2,9 @@
     <fieldset id="formAddFieldset">
         <legend>Add person</legend>
         <label for="profilepic">Upload profile picture:</label>
-        <input type="file" id="profilepic" name="profilepic">
+        <div id="drop_zone">
+            <input type="file" id="profilepic" name="profilepic">
+        </div>
         <label for="firstname">Firstname:</label>
         <input type="text" id="firstname" name="firstname">
         <label for="lastname">Lastname:</label>
