--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -340,3 +340,13 @@ nav ul li:last-of-type {
 .student-profile-content div ul {
   margin-bottom: 10px;
 }
+
+#drop_zone {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100px;
+
+  border: 2px solid var(--bg-color-body);
+  border-radius: 5px;
+}
