Added: liked overview page, Removed: removed redundant match page, Updated: navigation and server logic

--- a/views/pages/liked.ejs
+++ b/views/pages/liked.ejs
@@ -5,7 +5,8 @@
     <body id="home">
         <main>
             <h1>WeStudy</h1>
-            <%- include('../partials/student-profile'); %> 
+            <%- include('../partials/liked-student'); %> 
+
 			<%- include('../components/navigation'); %>
         </main>
         <script src="../../public/js/script.js"></script>
