--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -85,9 +85,9 @@ u,
 ul,
 var,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
 article,
@@ -101,68 +101,66 @@ hgroup,
 menu,
 nav,
 section {
-  display: block
+    display: block;
 }
 
 body {
-  line-height: 1
+    line-height: 1;
 }
 
 ol,
 ul {
-  list-style: none
+    list-style: none;
 }
 
 blockquote,
 q {
-  quotes: none
+    quotes: none;
 }
 
 blockquote:after,
 blockquote:before,
 q:after,
 q:before {
-  content: '';
-  content: none
+    content: '';
+    content: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin: 0 0 1em
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 0 1em;
 }
-
 
 /* Tools  */
 
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
 }
-
 
 /* General */
 * {
-  font-family: inherit;
-  line-height: inherit;
-  color: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    color: inherit;
 }
 
 html {
-  height: 100%;
-  font-size: 16px;
-  font-size: 62.5%;
+    height: 100%;
+    font-size: 16px;
+    font-size: 62.5%;
 
-  background-color: white;
+    background-color: white;
 }
 
 /* Typografie  */
@@ -173,9 +171,9 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
+    margin-top: 0;
 
-  line-height: 1.1;
+    line-height: 1.1;
 }
 
 /* Add margin top to heading when it comes after another piece of content 
@@ -183,46 +181,44 @@ h6 {
   /* margin-top: 60px; 
 }*/
 
-
 /* Heading 1 */
 h1 {
-  color: #ffffff;
+    color: #ffffff;
 
-  margin-bottom: 16px;
+    margin-bottom: 16px;
 
-  font-size: 4rem;
-
+    font-size: 4rem;
 }
 
 /* Heading 2 */
 h2 {
-  color: #ffffff;
-  margin-bottom: 12px;
-  font-size: 3rem;
+    color: #ffffff;
+    margin-bottom: 12px;
+    font-size: 3rem;
 }
 
 /* Heading 3 */
 h3 {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 
 p {
-  color: #ffffff;
-  margin-bottom: 2rem;
+    color: #ffffff;
+    margin-bottom: 2rem;
 }
 
 a {
-  color: #ffffff;
-  text-decoration: none;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 strong {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 em,
 i {
-  font-style: italic;
+    font-style: italic;
 }
 
 /* ul,
@@ -231,11 +227,11 @@ ol {
 } */
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 ol {
-  list-style: decimal;
+    list-style: decimal;
 }
 
 /*  
@@ -246,35 +242,36 @@ Above is the tweaked version of the reset css to my whishes
 */
 
 :root {
-  --color-black: #000;
-  --color-white: #fff;
-  --bg-color-body: #2a5d6e;
-  --bg-color-main: #add8e6;
+    --color-black: #000;
+    --color-white: #fff;
 
-  --bg-color-menu: #6298AA;
-  --bg-color-button: #ADD8E6;
-  --bg-color-button-secondary: #ec1111a6;
+    --bg-color-main: #add8e6;
+    --bg-color-main-darkblue: #2a5d6e;
+
+    --bg-color-menu: #6298aa;
+    --bg-color-button: #add8e6;
+    --bg-color-button-secondary: #ec1111a6;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
-  background-color: var(--bg-color-body);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem;
+    background-color: var(--bg-color-main-darkblue);
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
 }
 
 main {
-  padding: 40px;
-  margin: 20px 380px;
+    padding: 40px;
+    margin: 20px 380px;
 
-  border-radius: 10px;
+    border-radius: 10px;
 
-  background-color: var(--bg-color-main);
+    background-color: var(--bg-color-main);
 }
 
 nav ul {
@@ -285,68 +282,117 @@ nav ul {
     width: 100%;
 }
 
-nav ul li{
-  margin-right: 20px;
-  font-size: 24px;
+nav ul li {
+    margin-right: 20px;
+    font-size: 24px;
 }
 
 nav ul li:last-of-type {
-  margin: 0;
+    margin: 0;
 }
 
 #update > fieldset {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 #formAddFieldset {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
-  flex-wrap: nowrap;
+    flex-wrap: nowrap;
 }
 
 .student-profile-container {
-  width: 100%;
+    width: 100%;
 
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .profileimg-container {
-  position: relative;
-  width: 100%;
-  height: 0;
+    position: relative;
+    width: 100%;
+    height: 0;
 
-  overflow: hidden;
+    overflow: hidden;
 
-  border-radius: 10px;
+    border-radius: 10px;
 
-  padding-bottom: 90%;
-  margin-bottom: 10px;
+    padding-bottom: 90%;
+    margin-bottom: 10px;
 }
 
 .profileimg-container img {
-  position: absolute;
-  left: 0;
-  top: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
 
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 
-  object-fit: cover;
-  object-position: center;
+    object-fit: cover;
+    object-position: center;
 }
 
 .student-profile-content div ul {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
-#drop_zone {
-  display: flex;
-  align-items: flex-end;
-  width: 100%;
-  height: 100px;
+.drop-zone {
+    max-width: 100%;
+    height: 200px;
+    padding: 25px;
+    margin-bottom: 25px;
 
-  border: 2px solid var(--bg-color-body);
-  border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+
+    cursor: pointer;
+
+    color: #009578;
+
+    border: 4px dashed #009578;
+    border-radius: 10px;
+}
+
+.drop-zone:hover,
+.drop-zone--over {
+    background-color: var(--color-white);
+    border-color: var(--bg-color-main-darkblue);
+
+    color: var(--bg-color-main-darkblue);
+    border-style: solid;
+}
+
+.drop-zone__input {
+  display: none;
+}
+
+.drop-zone__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #cccccc;
+  background-size: cover;
+  position: relative;
+}
+
+.drop-zone__thumb::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.75);
+  font-size: 14px;
+  text-align: center;
 }
