added: PE, implemented 2 webapi 1 public api, also did a touch up on some basic styling

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
     <%- include('../components/head'); %>
     <body>
+        <%- include('../components/navigation'); %>
         <main>
-            <section><%- include('../partials/add-form'); %></section>
-            <%- include('../components/navigation'); %>
+            <section>
+                <%- include('../partials/add-form'); %>
+            </section>
         </main>
         <script src="../../public/js/script.js"></script>
     </body>
