--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -183,7 +183,9 @@ h6 {
 
 /* Heading 1 */
 h1 {
-    color: #ffffff;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    font-size: 4rem;
 
     margin-bottom: 16px;
 
@@ -192,9 +194,12 @@ h1 {
 
 /* Heading 2 */
 h2 {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
+
     color: #ffffff;
     margin-bottom: 12px;
-    font-size: 3rem;
 }
 
 /* Heading 3 */
@@ -246,7 +251,8 @@ Above is the tweaked version of the reset css to my whishes
     --color-white: #fff;
 
     --bg-color-main: #add8e6;
-    --bg-color-main-darkblue: #2a5d6e;
+    --color-lightblue: #53b3d2;
+    --color-darkblue: #2a5d6e;
 
     --bg-color-menu: #6298aa;
     --bg-color-button: #add8e6;
@@ -259,19 +265,25 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: var(--bg-color-main-darkblue);
+    background-color: var(--color-darkblue);
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 1.5rem;
 }
 
 main {
+    width: 100%;
+    max-width: 480px;
     padding: 40px;
     margin: 20px 380px;
 
     border-radius: 10px;
 
     background-color: var(--bg-color-main);
+}
+
+nav {
+    margin: 25px 0 15px;
 }
 
 nav ul {
@@ -289,6 +301,16 @@ nav ul li {
 
 nav ul li:last-of-type {
     margin: 0;
+}
+
+nav ul li a {
+    color: var(--color-white);
+    transition: 0.2s ease-in-out;
+}
+
+nav ul li a:hover {
+    color: var(--color-lightblue);
+    transition: 0.2s ease-in-out;
 }
 
 #update > fieldset {
@@ -345,8 +367,9 @@ nav ul li:last-of-type {
     margin-bottom: 25px;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     text-align: center;
 
     font-family: 'Quicksand', sans-serif;
@@ -359,40 +382,117 @@ nav ul li:last-of-type {
 
     border: 4px dashed #009578;
     border-radius: 10px;
+    visibility: hidden;
+
+    transition: 0.2s ease-in-out;
+}
+
+.drop-zone__input {
+    align-self: flex-start;
+    order: 2;
+    padding-bottom: 5px;
+    margin: 5px 0;
+
+    visibility: visible;
+}
+
+input[type='text'] {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .drop-zone:hover,
 .drop-zone--over {
     background-color: var(--color-white);
-    border-color: var(--bg-color-main-darkblue);
+    border-color: var(--color-darkblue);
 
-    color: var(--bg-color-main-darkblue);
+    color: var(--color-darkblue);
     border-style: solid;
-}
-
-.drop-zone__input {
-  display: none;
+    transition: 0.2s ease-in-out;
 }
 
 .drop-zone__thumb {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  background-color: #cccccc;
-  background-size: cover;
-  position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #cccccc;
+    background-size: cover;
+    position: relative;
 }
 
 .drop-zone__thumb::after {
-  content: attr(data-label);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 5px 0;
-  color: #ffffff;
-  background: rgba(0, 0, 0, 0.75);
-  font-size: 14px;
-  text-align: center;
+    content: attr(data-label);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px 0;
+    color: #ffffff;
+    background: rgba(0, 0, 0, 0.75);
+    font-size: 14px;
+    text-align: center;
+}
+
+/* quote styling */
+
+.quote-txt,
+.quote-txt2 {
+    /* Dont change this, this is altered in javascript */
+    display: none;
+
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color-darkblue);
+}
+
+/* label & input styling */
+
+label {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color-darkblue);
+
+    margin-bottom: 5px;
+}
+
+input[type='text'] {
+    margin-bottom: 5px;
+}
+
+.btn {
+    border-radius: 5px;
+    padding: 10px 25px;
+    margin: 10px 0 0;
+
+    background-color: var(--color-darkblue);
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color-white);
+
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.btn:hover {
+    background-color: var(--color-lightblue);
+    transition: 0.2s ease-in-out;
+}
+
+#update {
+    display: flex;
+    justify-content: space-between;
+}
+
+div ul li {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
 }
