--- a/views/partials/liked-student.ejs
+++ b/views/partials/liked-student.ejs
@@ -15,12 +15,8 @@
                 <li>Liked: <%= student.liked %></li>
             </ul>
             <form id="update" action="/update" method="post">
-                <button name="unlike" type="submit" value="<%= student._id %>">
-                    unlike
-                </button>
-                <button name="like" type="submit" value="<%= student._id %>">
-                    like
-                </button>
+                <button class="btn" name="unlike" type="submit" value="<%= student._id %>">Unlike</button>
+                <button class="btn" name="like" type="submit" value="<%= student._id %>">Like</button>
             </form>
         </div>
     </div>
