changed: html tag

--- a/views/partials/add-form.ejs
+++ b/views/partials/add-form.ejs
@@ -1,6 +1,6 @@
 <div class="quote-container">
     <p class="quote-txt">Wordt gemotiveerd door deze inspirationele quote:</p>
-    <p class="quote-txt2"></p>
+    <blockquote class="quote-txt2"></blockquote>
 </div>
 
 <form action="/add" method="post" enctype="multipart/form-data">
